# omni_robot_SLAM_project

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml
omni_robot_odom/: CMakeLists.txt  package.xml
omni_robot_odom/cfg/: odom.pj  odom.rviz  parameters.cfg
omni_robot_odom/include/omni_robot_odom/: KinematicsPubSub.h  OdomPubSub.h  TF2Broadcaster.h  WheelControlPubSub.h
omni_robot_odom/launch/: odometry.launch
omni_robot_odom/msg/: Custom2DPose.msg
omni_robot_odom/src/: KinematicsPubSub.cpp  OdomPubSub.cpp  TF2Broadcaster.cpp  WheelControlPubSub.cpp  initialization.cpp  kinematics.cpp  odom.cpp  path_publisher.cpp  resetclient.cpp  wheelcontrol.cpp
omni_robot_odom/srv/: ResetPose.srv
slam_gmapping_amcl/: CMakeLists.txt  package.xml
slam_gmapping_amcl/include/slam_gmapping_amcl/: TrajectoryPlotter.h
slam_gmapping_amcl/launch/: amcl.launch.xml  gmapping.launch.xml  laser_merge.launch  localization.launch  mapping.launch
slam_gmapping_amcl/maps/: final_map.pgm  final_map.yaml  test_amcl.pgm
slam_gmapping_amcl/rviz/: amcl.rviz  mapping.rviz  scanmerge.rviz
slam_gmapping_amcl/src/: TF2Broadcaster.cpp  TrajectoryPlotter.cpp  draw_trajectory.cpp  mapping.cpp
slam_gmapping_amcl/srv/: SaveMap.srv
slam_gmapping_amcl/urdf/: omni_robot.urdf
