<?xml version="1.0"?>
<package format="2">
  <name>slam_gmapping_amcl</name>
  <version>0.0.0</version>
  <description> Custom LIDAR-based particle SLAM package using gmapping and amcl libraries for omnidirectional 4 wheel mobile robot</description>

  <!-- Maintainer -->
  <maintainer email="helling.nikolas@gmail.com">nikolas-helling</maintainer>

  <!-- License -->
  <license>MIT</license>

  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Build export dependencies -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>

  <!-- Execution dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Export -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
